1. Fixed issue in ItemManager page, where ItemQuality is saved wrongly. 2. Enhanced ItemQuality dropdown with respective colors on changing the value. 3. Separated main template into 2 templates, where the 2nd is for Table alome, since, on any update, we can render only the sub template, and no need of rendering main template. 4. Added Multiple Delete options. 5. Small css fix in AddInvoice page, to add scrollbar in item Table if the list is large.

--- a/css/am.addInvoice.css
+++ b/css/am.addInvoice.css
@@ -24,6 +24,7 @@
 	padding: 0px;
 	margin-left: 15px;
 	background-color: white;
+    overflow-x: hidden;
 }
 #addInvoice-container .itemListTable thead{
 	color: white;
